// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - textarea renders correctly 1`] = `
<label
  class="form-label"
  for="example-textarea-1"
>
  Example textarea
</label>
`;

exports[`OE - textarea renders correctly when disabled 1`] = `
<label
  class="form-label"
  for="example-textarea-1"
>
  Example textarea
</label>
`;

exports[`OE - textarea renders correctly when horizontal 1`] = `
<div
  class="row"
>
  <label
    class="col-form-label col-sm-2"
    for="example-textarea-1"
  >
    Example textarea
  </label>
  <div
    class="col-sm-10"
  >
    <textarea
      class="form-control form-control-sm"
      id="example-textarea-1"
      placeholder="Text here"
      rows="4"
    />
  </div>
  <div
    class="form-text"
  >
    An helper text
  </div>
</div>
`;

exports[`OE - textarea renders correctly when invalid 1`] = `
<label
  class="form-label"
  for="example-textarea-1"
>
  Example textarea
</label>
`;

exports[`OE - textarea renders correctly when readonly 1`] = `
<label
  class="form-label"
  for="example-textarea-1"
>
  Example textarea
</label>
`;

exports[`OE - textarea renders correctly when required 1`] = `
<label
  class="form-label"
  for="example-textarea-1"
>
  Example textarea
</label>
`;

exports[`OE - textarea renders correctly with floating label 1`] = `
<div
  class="form-floating"
>
  <textarea
    class="form-control form-control-sm"
    id="example-textarea-1"
    placeholder="Text here"
    rows="4"
  />
  <label
    class="form-label"
    for="example-textarea-1"
  >
    Example textarea
  </label>
  <div
    class="form-text"
  >
    An helper text
  </div>
</div>
`;
